bugFix: z-index

--- a/css/common.scss
+++ b/css/common.scss
@@ -1661,7 +1661,6 @@ div.tab-control div.tab-page {
 	top: 1px;
 	padding: 1em;
 	@include border-radius(5px);
-	z-index: 2;
 }
 
 .narrow div.tab-control div.tab-page {
